--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FileApi</title>
+  <title>Dawa Lhakor</title>
+  <!-- Standard favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
+  <!-- iOS specific -->
+  <link rel="apple-touch-icon" href="favicon.png">
+  <!-- Android specific -->
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon.png">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
