--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,12 @@
   <link rel="icon" type="image/png" sizes="192x192" href="favicon.png">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Preconnect to Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Load only the font weights we need -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Great+Vibes&family=Lugrasimo&family=Platypi:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
